--- a/app/view/chat/msgbox.html
+++ b/app/view/chat/msgbox.html
@@ -15,7 +15,6 @@
       position: relative;
       margin-bottom: 10px;
       padding: 0 130px 10px 60px;
-      padding-bottom: 10px;
       line-height: 22px;
       border-bottom: 1px dotted #e2e2e2;
     }
@@ -75,21 +74,15 @@
 
 <ul class="layim-msgbox" id="LAY_view"></ul>
 
-<div style="margin: 0 15px;">
-  <blockquote class="layui-elem-quote">注意：这些都是模拟数据，实际使用时，需将其中的模拟接口改为你的项目真实接口。
-    <br>该模版文件所在目录（相对于layui.js）：/css/modules/layim/html/msgbox.html
-  </blockquote>
-</div>
-
 <textarea title="消息模版" id="LAY_tpl" style="display:none;">
 {{# layui.each(d.data, function(index, item){
   if(item.from){ }}
-    <li data-uid="{{ item.from }}" data-fromGroup="{{ item.from_group }}">
-      <a href="/u/{{ item.from }}/" target="_blank">
-        <img src="{{ item.user.avatar }}" class="layui-circle layim-msgbox-avatar">
+    <li data-id="{{ item.id }}" data-from="{{ item.from }}" data-group="{{ item.group }}" data-type="{{ item.type }}">
+      <a href="#" target="_blank">
+        <img src="{{ item.userInfo.avatar }}" class="layui-circle layim-msgbox-avatar">
       </a>
       <p class="layim-msgbox-user">
-        <a href="/u/{{ item.from }}/" target="_blank">{{ item.user.username||'' }}</a>
+        <a href="#" target="_blank">{{ item.userInfo.username||'' }}</a>
         <span>{{ item.time }}</span>
       </p>
       <p class="layim-msgbox-content">
@@ -113,51 +106,51 @@
 上述模版采用了 laytpl 语法，不了解的同学可以去看下文档：http://www.layui.com/doc/modules/laytpl.html
 -->
 
-
 <script src="__layuiadmin__/layui/layui.js?v=1"></script>
 <script>
     layui.use(['layim', 'flow'], function () {
-        var layim = layui.layim
-            , layer = layui.layer
-            , laytpl = layui.laytpl
-            , $ = layui.jquery
-            , flow = layui.flow;
+        var layim = layui.layim,
+            layer = layui.layer,
+            laytpl = layui.laytpl,
+            $ = layui.jquery,
+            flow = layui.flow,
+            limit = 10;
 
-        var cache = {}; //用于临时记录请求到的数据
+        var users = {};
+        var groups = {};
 
         //请求消息
         var renderMsg = function (page, callback) {
-
-            //实际部署时，请将下述 getmsg.json 改为你的接口地址
-
-            $.get('__layuiadmin__/layui/css/modules/layim/html/getmsg.json', {
-                page: page || 1
+            $.get('/chat/msgbox', {
+                page: page || 1,
+                limit: limit
             }, function (res) {
                 if (res.code != 0) {
                     return layer.msg(res.msg);
                 }
 
                 //记录来源用户信息
-                layui.each(res.data, function (index, item) {
-                    cache[item.from] = item.user;
+                layui.each(res.data.list, function (index, item) {
+                    users[item.from] = item.userInfo;
+                    groups[item.group] = item.groupInfo;
                 });
 
-                callback && callback(res.data, res.pages);
+                callback && callback(res.data.list, res.data.count);
             });
         };
 
         //消息信息流
         flow.load({
-            elem: '#LAY_view' //流加载容器
-            , isAuto: false
-            , end: '<li class="layim-msgbox-tips">暂无更多新消息</li>'
-            , done: function (page, next) { //加载下一页
-                renderMsg(page, function (data, pages) {
+            elem: '#LAY_view',  //流加载容器
+            isAuto: false,
+            end: '<li class="layim-msgbox-tips">暂无更多新消息</li>',
+            done: function (page, next) { //加载下一页
+                renderMsg(page, function (data, count) {
                     var html = laytpl(LAY_tpl.value).render({
-                        data: data
-                        , page: page
+                        data: data,
+                        page: page
                     });
-                    next(html, page < pages);
+                    next(html, page < Math.ceil(count / limit));
                 });
             }
         });
@@ -173,69 +166,70 @@
         var active = {
             //同意
             agree: function (othis) {
-                var li = othis.parents('li')
-                    , uid = li.data('uid')
-                    , from_group = li.data('fromGroup')
-                    , user = cache[uid];
+                var li = othis.parents('li'),
+                    id = li.data('id'),
+                    type = li.data('type');
 
-                //选择分组
-                parent.layui.layim.setFriendGroup({
-                    type: 'friend'
-                    , username: user.username
-                    , avatar: user.avatar
-                    , group: parent.layui.layim.cache().friend //获取好友分组数据
-                    , submit: function (group, index) {
+                if (type === 0) {
+                    var userId = li.data('from'),
+                        userInfo = users[userId];
+                    //好友分组面板
+                    parent.layui.layim.setFriendGroup({
+                        type: 'friend',
+                        username: userInfo.username,//好友昵称，若申请加群，参数为：groupname
+                        avatar: userInfo.avatar,//头像
+                        group: parent.layui.layim.cache().friend,  //获取好友分组数据
+                        submit: function (group, index) {
+                            //同意后，将好友追加到主面板
+                            $.post('/chat/agreeFriend', {
+                                id: id, //对方用户ID
+                                group: group //我设定的好友分组
+                            }, function (res) {
+                                if (res.code != 0) {
+                                    return layer.msg(res.msg);
+                                }
 
-                        //将好友追加到主面板
-                        parent.layui.layim.addList({
-                            type: 'friend'
-                            , avatar: user.avatar //好友头像
-                            , username: user.username //好友昵称
-                            , groupid: group //所在的分组id
-                            , id: uid //好友ID
-                            , sign: user.sign //好友签名
-                        });
-                        parent.layer.close(index);
-                        othis.parent().html('已同意');
-
-
-                        //实际部署时，请开启下述注释，并改成你的接口地址
-                        /*
-                        $.post('/im/agreeFriend', {
-                          uid: uid //对方用户ID
-                          ,from_group: from_group //对方设定的好友分组
-                          ,group: group //我设定的好友分组
-                        }, function(res){
-                          if(res.code != 0){
-                            return layer.msg(res.msg);
-                          }
-
-                          //将好友追加到主面板
-                          parent.layui.layim.addList({
-                            type: 'friend'
-                            ,avatar: user.avatar //好友头像
-                            ,username: user.username //好友昵称
-                            ,groupid: group //所在的分组id
-                            ,id: uid //好友ID
-                            ,sign: user.sign //好友签名
-                          });
-                          parent.layer.close(index);
-                          othis.parent().html('已同意');
-                        });
-                        */
-
-                    }
-                });
-            }
+                                //有好友或者群新增时 主面板同步添加的信息
+                                parent.layui.layim.addList({
+                                    type: 'friend', //列表类型，只支持friend和group两种
+                                    avatar: userInfo.avatar, //好友头像
+                                    username: userInfo.account, //好友昵称
+                                    groupid: group, //所在的分组id
+                                    id: from,//好友ID
+                                    sign: userInfo.signature //好友签名
+                                });
+                                parent.layer.close(index);
+                                othis.parent().html('已同意');
+                            });
+                        }
+                    });
+                } else if (type === 2) {
+                    var groupId = li.data('group'),
+                        groupInfo = groups[groupId];
+                    console.log({
+                        type: 'group',
+                        avatar: groupInfo.avatar, //群组头像
+                        groupname: groupInfo.username, //群组名称
+                        id: groupId //群组id
+                    })
+                    parent.layui.layim.addList({
+                        type: 'group',
+                        avatar: groupInfo.avatar, //群组头像
+                        groupname: groupInfo.username, //群组名称
+                        id: groupId //群组id
+                    });
+                    othis.parent().html('已同意');
+                }
+            },
 
             //拒绝
-            , refuse: function (othis) {
-                var li = othis.parents('li')
-                    , uid = li.data('uid');
+            refuse: function (othis) {
+                var li = othis.parents('li'),
+                    id = li.data('id');
 
                 layer.confirm('确定拒绝吗？', function (index) {
-                    $.post('/im/refuseFriend', {
-                        uid: uid //对方用户ID
+                    $.post('/chat/refuseFriend', {
+                        id: id
                     }, function (res) {
                         if (res.code != 0) {
                             return layer.msg(res.msg);
